# mysql-haskell

./: ChangeLog.md  flake.nix  mysql-haskell.cabal
Database/MySQL/BinLogProtocol/: BinLogMeta.hs
Database/MySQL/Protocol/: ColumnDef.hs  Escape.hs  MySQLValue.hs
test/: BinLog.hs  BinaryRow.hs  ExecuteMany.hs  Main.hs  TextRow.hs
