name:                mysql-haskell
version:             0.8.4.2
synopsis:            pure haskell MySQL driver
description:         pure haskell MySQL driver
license:             BSD3
license-file:        LICENSE
author:              winterland1989
maintainer:          winterland1989@gmail.com
copyright:           (c) 2016 Winterland
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
homepage:            https://github.com/winterland1989/mysql-haskell
bug-reports:         https://github.com/winterland1989/mysql-haskell/issues

source-repository head
  type:     git
  location: git://github.com/winterland1989/mysql-haskell.git

library
    exposed-modules:    Database.MySQL.Base
                    ,   Database.MySQL.TLS
                    ,   Database.MySQL.Protocol.Auth
                    ,   Database.MySQL.Protocol.Command
                    ,   Database.MySQL.Protocol.ColumnDef
                    ,   Database.MySQL.Protocol.Packet
                    ,   Database.MySQL.Protocol.MySQLValue
                    ,   Database.MySQL.Protocol.Escape
                    ,   Database.MySQL.BinLog
                    ,   Database.MySQL.BinLogProtocol.BinLogEvent
                    ,   Database.MySQL.BinLogProtocol.BinLogValue
                    ,   Database.MySQL.BinLogProtocol.BinLogMeta
                    ,   Database.MySQL.Connection
    other-modules:      Database.MySQL.Query
    build-depends:      base < 5
                    ,   monad-loops
                    ,   network
                    ,   io-streams
                    ,   tcp-streams
                    ,   wire-streams
                    ,   binary
                    ,   binary-ieee754
                    ,   binary-parsers
                    ,   bytestring
                    ,   text
                    ,   cryptonite
                    ,   memory
                    ,   time
                    ,   scientific
                    ,   bytestring-lexing
                    ,   blaze-textual
                    ,   word24
                    ,   tls
                    ,   vector

    default-language:    Haskell2010
    default-extensions:     DeriveDataTypeable
                        ,   DeriveGeneric
                        ,   MultiWayIf
                        ,   OverloadedStrings
    ghc-options:       -Wall

test-suite test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules:      BinaryRow
                    ,   BinaryRowNew
                    ,   BinLog
                    ,   BinLogNew
                    ,   TextRow
                    ,   TextRowNew
                    ,   ExecuteMany
    hs-source-dirs: test
    build-depends:  mysql-haskell
                  , base
                  , bytestring
                  , tasty
                  , tasty-hunit
                  , text
                  , io-streams
                  , time
                  , vector
    default-extensions:     MultiWayIf
                        ,   OverloadedStrings
    ghc-options:         -threaded
    default-language:    Haskell2010
